data/derived/sp14/progs/unify/prog3123.ml.out
Characters 28-48:
  wwhile (fun x -> f b = b,b);;
         ^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
